add content above and below.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="stats">
+    {{direction}} c: {{count}}
     <button (click)="addContentAbove()">▲</button>
     <button (click)="addContentBelow()">▼</button>
 </div>
