getting complex, when going to top of page, a scroll event is triggered which I don't know how to handle yet.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<h2 id="top">Top of page!</h2>
+
 <div class="stats">
     {{direction}} c: {{count}}
     <button (click)="addContentAbove()">▲</button>
@@ -140,4 +142,7 @@
     feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare
     lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus gravida semper nisi. Nullam vel
     sem. Pellentesque libero tortor, tincidunt et, tincidunt eget, semper nec, quam. Sed hendrerit. Morbi ac felis.</p>
+
+<a href="#top">Go to top</a>
+
 <p>{{below}}</p>
