--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h2 id="top">Top of page!</h2>
 
 <div class="stats">
-    {{direction}} c: {{count}}
+    {{data}} c: {{count}}
     <button (click)="addContentAbove()">▲</button>
     <button (click)="addContentBelow()">▼</button>
 </div>
